[tool.poetry]
name = "rapid"
version = "0.1.0"
description = ""
authors = ["MatarSherman <matarsherman1@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
requests = "^2.32.0"
tld = "^0.13"
flake8 = "^7.0.0"
validators = "^0.28.1"
pydantic-settings = "^2.2.1"
apscheduler = "^3.10.4"
motor = "^3.4.0"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.1"

[tool.poe.tasks]
dev = "fastapi dev src/main.py"
prod = "fastapi run src/main.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
